Layout bug fixes

--- a/src/components/Layout/ChangeArrow/ChangeArrow.css
+++ b/src/components/Layout/ChangeArrow/ChangeArrow.css
@@ -429,6 +429,8 @@
 
 
 
+
+
 .nextArrow button {
     width: 100%;
     height: 100%;
@@ -465,13 +467,15 @@
 }
 
 
-@media (max-height:912px)
+@media (width: 1368px) and (height:912px)
 {
+
     .nextArrowUpDown {
 
         position: absolute;
         top: 950px;
         transition: top 1s;
     }
+
 }
 
